[package]
name = "implot-wgpu-demo"
version = "0.1.0"
authors = ["Benedikt Mandelkow <benedikt.mandelkow@rwth-aachen.de>", "imgui-wgpu contributors"]
edition = "2018"

[dependencies]
implot = { path = "../../" }

wgpu = "0.7"
winit = "0.24" # opening windows and handling input
futures = "0.3" # executing async functions using blocking executor
imgui = "0.7"
imgui-winit-support = "0.7" # connection of input (keys) to imgui
imgui-wgpu = "0.14" # imgui backend for drawing using wgpu
examples-shared = { path = "../examples-shared" }

# [patch.crates-io]
# imgui-wgpu = { path = "../../../imgui-wgpu-rs" }
